@@ -11,6 +11,10 @@ let version ret =
     Coq_config.version Coq_config.date;
   Printf.printf "compiled on %s with OCaml %s\n" Coq_config.compile_date Coq_config.caml_version;
   exit ret
+let machine_readable_version ret =
+  Printf.printf "%s %s\n"
+    Coq_config.version Coq_config.caml_version;
+  exit ret
 
 (* print the usage of coqtop (or coqc) on channel co *)
 
